# tutr

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  VISION.md  pyproject.toml
.agents/analysis/: security-tasks.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml  python-publish.yml  tests.yml
docs/: configuration.html  development.html  getting-started.html  index.html  usage.html
docs/assets/scripts/: site.js
docs/assets/stylesheets/: site.css
scripts/: release.sh  run_integration_tests.sh
src/tmht/: shell.py
src/tutr/: __init__.py  __main__.py  cli.py  config.py  constants.py  context.py  llm.py  models.py  prompt.py  safety.py  setup.py  shell.py  tutr.py
src/tutr/cli/: configure.py  query.py  wizard.py
src/tutr/models/: tutr_config.py
src/tutr/shell/: constants.py  loop.py  shell.py
tests/: conftest.py  integration_live_cases.json  test_cli.py  test_cli_shared.py  test_config.py  test_context.py  test_integration_live.py  test_llm.py  test_models.py  test_prompt.py  test_safety.py  test_setup.py  test_shell.py  test_tutr.py  test_update_check.py
