[project]
name = "tutr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "spi", email = "spi3@pm.me" }
]
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.81.13",
    "pydantic>=2.12.5",
]

[project.scripts]
tutr = "tutr.cli:entrypoint"
test = "pytest:main"
shell = "tutr.shell:entrypoint"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
