[project]
name = "tutr"
version = "0.1.5"
description = "AI-powered terminal assistant that generates shell commands from natural language."
readme = "README.md"
authors = [
    { name = "spi", email = "spi3@pm.me" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.81.13,<2.0",
    "pydantic>=2.12.5",
]
keywords = ["cli", "terminal", "llm", "developer-tools", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/spi3/tutr"
Repository = "https://github.com/spi3/tutr"
Issues = "https://github.com/spi3/tutr/issues"

[project.scripts]
tutr = "tutr.shell:entrypoint"
tutr-cli = "tutr.cli:entrypoint"

[build-system]
requires = ["uv_build>=0.9.9,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tutr --cov-report=term-missing --cov-fail-under=85"
markers = [
    "integration: live integration tests that call real external/local LLM systems",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "hypothesis>=6.142.4",
    "mypy>=1.18.2",
    "pip-audit>=2.10.0",
    "poethepoet>=0.37.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
    "twine>=6.2.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F", "I", "B", "N", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
strict = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
check_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.poe.tasks.check]
sequence = [
    { cmd = "ruff check ." },
    { cmd = "ruff format --check ." },
    { cmd = "mypy" },
    { cmd = "pip-audit" },
    { cmd = "pytest -q" },
]

[tool.poe.tasks.dist]
sequence = [
    { cmd = "uv build" },
    { cmd = "twine check dist/tutr-*" },
]

[tool.poe.tasks.publish_testpypi]
help = "Upload dist artifacts to TestPyPI using TWINE_USERNAME/TWINE_PASSWORD."
cmd = "twine upload --repository testpypi dist/tutr-*"

[tool.poe.tasks.publish_pypi]
help = "Upload dist artifacts to PyPI using TWINE_USERNAME/TWINE_PASSWORD."
cmd = "twine upload dist/tutr-*"
